# V.SOL-OLT-Automation-Tool

./: .gitignore  .pre-commit-config.yaml  README.md  example.yaml  pyproject.toml  volt-cli-config.ini
scripts/: batch_apply_cfgs  build  codestyle  setup  test  update
src/volt_cli_tool/: __init__.py  app.py  cli.py  configs.py  workflows.py
src/volt_cli_tool/emsclient/: __init__.py  profile_mgmt.py  webclient.py
src/volt_cli_tool/models/: __init__.py  config_yaml.py  profile.py
tests/: test_version.py
